brewery name overflowing bug resolved

--- a/css/beermenter.css
+++ b/css/beermenter.css
@@ -28,12 +28,28 @@ div.brewery h3 {
 	margin: 0px;
 	font-weight: normal;
   cursor: pointer;
+  overflow: scroll;
+  text-overflow: clip;
+  white-space: nowrap;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    height: 0px;
+    background: transparent;  /* optional: just make scrollbar invisible */
 }
 div.brewery p {
 	font-family: BrixSansLight;
 	font-size: 13px;
 	margin: 0px;
   cursor: pointer;
+  overflow: scroll;
+  text-overflow: clip;
+  white-space: nowrap;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    height: 0px;
+    background: transparent;  /* optional: just make scrollbar invisible */
 }
 div.brewery a {
 	width: 100%;
